	Fixed bug where resize handlers wasn't moved correctly when scrolling inline editable elements.
	Fixed bug where it wasn't possible to paste from Excel and possible other applications due to Clipboard API bugs in browsers.
	Fixed bug where Shift+Ctrl+V didn't produce a plain text paste on IE.
	Fixed bug where IE would sometimes move the selection to the a previous location.
	Fixed various bugs and issues related to indentation of OL/UL list elements.
	Fixed so IE 7 renders the classic mode buttons the same size as other browsers.
	Fixed so document.readyState is checked when loading and initializing TinyMCE manually after page load.
Version 4.0.8 (2013-10-10)
	Added RTL support so all of the UI is rendered right to left if a language pack has a _dir property set to rtl.
	Fixed bug where layout managers wouldn't handle subpixel values properly. When for example the browser was zoomed in.
	Fixed bug where the importcss plugin wouldn't import classes from local stylesheets with remote @import rules on Gecko.
	Fixed bug where Arabic characters wouldn't be properly counted in wordcount plugin.
	Fixed bug where submit event would still fire even if it was unbound on IE 10. Now the event is simply ignored.
	Fixed bug where IE 11 would return border-image: none when getting style attributes with borders in them.
	Fixed various UI rendering issues on older IE versions.
	Fixed so readonly option renderes the editor in inline mode with all UI elements disabled and all events blocked.
Version 4.0.7 (2013-10-02)
	Added new importcss_selector_filter option to importcss plugin. Makes it easier to select specific classes to import.
	Added new importcss_groups option to importcss plugin. Enables you separate classes into menu groups based on filters.
	Added new PastePreProcess/PastePostProcess events and reintroduced paste_preprocess/paste_postprocess paste options.
	Added new paste_word_valid_elements option lets you control what elements gets pasted when pasting from Word.